...
  -->
<resources  xmlns:tools="http://schemas.android.com/tools">

    <!-- General terms -->
    <string formatted="false" name="stage">Stage</string>
    <string formatted="false" name="play">Play</string>
    <string formatted="false" name="settings">Settings</string>
    <string formatted="false" name="redo">Redo</string>
    <string formatted="false" name="undo">Undo</string>

    <string formatted="false" name="new_option">new…</string>
    <string formatted="false" name="edit_option">edit…</string>

...
    <string formatted="false" name="help">Help</string>

    <string formatted="false" name="discard">Discard</string>

    <string formatted="false" name="next">Next</string>

    <string formatted="false" name="ok">OK</string>
    <string formatted="false" name="done">Done</string>
    <string formatted="false" name="close">Close</string>

    <string formatted="false" name= "assistant">Assistant</string>

    <string formatted="false" name="yes">Yes</string>
...
    <string formatted="false" name="decline">Decline</string>

    <string formatted="false" name="select_all">Select all</string>
    <string formatted="false" name="deselect_all">Deselect all</string>

    <string formatted="false" name="skip">skip</string>
    <string formatted="false" name="warning">Warning</string>
    <string formatted="false" name="error">Error</string>

    <string formatted="false" name="loading">Loading…</string>
    <string formatted="false" name="please_wait">Please wait</string>
    <string formatted="false" name="search_hint">Search</string>

...
    <!--  -->

    <!-- NetworkAlertDialog -->
    <string formatted="false" name="error_no_network_title">No network</string>

    <!-- UploadProjectDialog -->
    <string formatted="false" name="upload_project_dialog_title">Upload project</string>
    <string formatted="false" name="upload_description">Description:</string>
    <string formatted="false" name="upload_notes_and_credits">Notes and credits:</string>
    <string formatted="false" name="upload_notes_and_credits_explanation">How did you create this project? Did you use ideas, scripts or artwork from other people? Thank them here.</string>
    <string formatted="false" name="upload_tag_dialog_title">Please choose up to three categories</string>
    <string formatted="false" name="upload_tags_maximum_error">Selecting more than 3 tags is not possible.</string>

...
    <string formatted="false" name="unchanged_upload_url">To learn more about remixes, please visit %1s.</string>
    <!-- -->

    <!-- Snackbar hints -->
    <string formatted="false" name="got_it">Got it</string>
    <string formatted="false" name="preference_description_hints">Enable to show hints</string>
    <string formatted="false" name="preference_title_enable_hints">Show hints </string>
    <string formatted="false" name="hint_category">All bricks are sorted in categories. Choose the category you are looking for.</string>
    <string formatted="false" name="hint_bricks">To add a brick to your script, tap on the brick you want to use.</string>
    <string formatted="false" name="hint_scripts">The script defines the behavior of your actor or object. To add bricks to the script,
        tap the \"+\" symbol.</string>
    <string formatted="false" name="hint_looks">Here you can find the different appearances of your actor or object. To add a new look,
        tap the \"+\" symbol.</string>
...
        sound category.</string>
    <string formatted="false" name="hint_objects">Your program consists of different actors and objects that can interact with each other.
        To add a new actor or object, tap the \"+\" symbol.</string>
    <!--  -->

    <!-- Dialog Disable hints -->
    <string formatted="false" name="dialog_disable_hints_title">Show hints?</string>
    <string formatted="false" name="dialog_disable_hints_text">Hints provide you with helpful information
        while making your first project.\n\nVisibility of hints can be changed in the
        settings.</string>
    <string formatted="false" name="dialog_disable_hints_button_hide">HIDE</string>
    <string formatted="false" name="dialog_disable_hints_button_show">SHOW</string>
    <!--  -->

    <!-- Crash report dialog -->
    <string formatted="false" name="plus" translatable="false">+</string>
    <!--  -->

...
